--- a/app/overrides.css
+++ b/app/overrides.css
@@ -1,8 +1,3 @@
-.tabs a {
-  padding: 4px;
-}
-
-.field-label .label {
-  font-size: 14px;
-  font-weight: 200;
+.navbar {
+    border-bottom: 1px solid #eee;
 }
